@@ -37,7 +37,7 @@ if {![catch {package vcompare $tk_patchLevel $tk_patchLevel}]} {
 
 package forget app-tkchat	;# Workaround until I can convince people
 				;# that apps are not packages.  :)  DGP
-package provide app-tkchat [regexp -inline {\d+\.\d+} {$Revision: 1.95 $}]
+package provide app-tkchat [regexp -inline {\d+\.\d+} {$Revision: 1.96 $}]
 
 namespace eval ::tkchat {
     # Everything will eventually be namespaced
@@ -48,7 +48,7 @@ namespace eval ::tkchat {
     variable HOST http://purl.org/mini
 
     variable HEADUrl {http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/tcllib/tclapps/apps/tkchat/tkchat.tcl?rev=HEAD}
-    variable rcsid   {$Id: tkchat.tcl,v 1.95 2003/04/29 20:56:28 patthoyts Exp $}
+    variable rcsid   {$Id: tkchat.tcl,v 1.96 2003/04/30 20:13:53 patthoyts Exp $}
 
     variable MSGS
     set MSGS(entered) [list \
@@ -872,7 +872,7 @@ set UserClicked 0
 array set RE {
     HelpStart {^<FONT COLOR="(.+?)"><B>\[(.+?)\]</B>(.*)$}
     MultiStart {^<FONT COLOR="(.+?)"><B>(\S+?)</B>:(.*?)$}
-    ActionStart {^<FONT COLOR="(.+?)"><B>\*\s+(\S+)\s+(.+)$}
+    ActionStart {^<FONT COLOR="(.+?)"><B>\*\s+(\S+?)\s+(.+)$}
     SectEnd {^(.*)</FONT>$}
     Color {^<FONT COLOR="(.+?)">(.*?)</FONT>$}
     Message {^<B>(\S+?)</B>:(.+?)$}
